Fixed Info section on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -68,6 +68,9 @@
 .TLtrack{
   background: #012681;
 }
+.contacticons{
+  padding-top: 40px;
+}
 .c3{
   width: 100%;
   padding-top: 20px;
